--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,27 +1,33 @@
 {
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "SheSecure backend",
+  "main": "server.js",
+  "scripts": {
+    "test": "node server.js",
+    "start": "nodemon server.js"
+  },
+  "type": "module",
+  "author": "Surya",
+  "license": "ISC",
   "dependencies": {
-    "axios": "^1.9.0",
+    "axios": "^1.8.2",
+    "cloudinary": "^2.6.0",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "express-fileupload": "^1.5.1",
     "express-session": "^1.18.1",
-    "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.15.1",
-    "nodemon": "^3.1.10"
+    "mongoose": "^8.13.1",
+    "nodemailer": "^6.10.0",
+    "otp-generator": "^4.0.1",
+    "socket.io": "^4.8.1",
+    "twilio": "^5.5.2"
   },
-  "name": "backend",
-  "version": "1.0.0",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "keywords": [],
-  "type": "module",
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "devDependencies": {
+    "nodemon": "^3.1.9"
+  }
 }
